fix bg fixed issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -2509,6 +2509,10 @@ video {
     background-size: auto;
   }
 
+  .lg\:bg-fixed {
+    background-attachment: fixed;
+  }
+
   .lg\:bg-top {
     background-position: top;
   }
